--- a/.github/workflows/release-drafter.yaml
+++ b/.github/workflows/release-drafter.yaml
@@ -9,4 +9,5 @@ on:
 
 jobs:
   workflows:
+    # yamllint disable-line rule:line-length
     uses: litinoveweedle/hassio-addons-workflows/.github/workflows/release-drafter.yaml@main
