--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,4 +13,5 @@ on:
 
 jobs:
   workflows:
+    # yamllint disable-line rule:line-length
     uses: litinoveweedle/hassio-addons-workflows/.github/workflows/addon-ci.yaml@main
